# mjx_cuda

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  test.cpp  testspeed.cpp
src/device/: CMakeLists.txt  io.cpp  io.h  math.h  smooth.cu  smooth.h  types.h  util.h
src/tests/: smooth_test.h  test_base.h
